language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo_in_constructor.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble = Ok(todo)\n"
---

const wibble = Ok(todo)
▔▔▔▔▔▔↑▔▔▔▔▔           


----- Hover content (markdown) -----
```gleam
Result(a, b)
```
