language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo_in_list.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble = [todo, 1]\n"
---

const wibble = [todo, 1]
▔▔▔▔▔▔↑▔▔▔▔▔            


----- Hover content (markdown) -----
```gleam
List(Int)
```
