language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo_invalid_message_still_works.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wobble = 1\nconst wibble = todo as [wobble]\n"
---

const wobble = 1
const wibble = todo as [wobble]
                        ↑▔▔▔▔▔ 


----- Hover content (markdown) -----
```gleam
Int
```
