language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo_message.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble = todo as \"wobble\"\n"
---

const wibble = todo as "wobble"
                       ▔↑▔▔▔▔▔▔


----- Hover content (markdown) -----
```gleam
String
```
