language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_pipe_with_invalid_step_2.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> map(wibble)\n  |> filter(fn(value) { value })\n}\n\nfn map(list: List(a), fun: fn(a) -> b) -> List(b) {}\nfn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) {}\n"
---

pub fn main() {
  [1, 2, 3]
  |> map(wibble)
     ↑▔▔        
  |> filter(fn(value) { value })
}

fn map(list: List(a), fun: fn(a) -> b) -> List(b) {}
fn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) {}


----- Hover content (markdown) -----
```gleam
fn(List(Int), fn(Int) -> Bool) -> List(Bool)
```
